added waiting for backend payment-success process take place when serving success view

--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -1183,6 +1183,7 @@
     \end{itemize}
     
     \subsubsection{Stripe} \label{sec:stripe}
+	%Nombrar a https://securionpay.com/ y https://www.paypal.com/
 
     % DESPLIEGUE Y SEGURIDAD
     \section{Despliegue y Seguridad}
@@ -1210,8 +1211,14 @@
 
     % MEJORAS Y AMPLIACIONES
     \section{Mejoras y Ampliaciones}
-    Testar el software
-    Sistema de valoracion por parte de los usuarios de los libros
+    %Testar el software
+    
+    %Sistema de valoracion por parte de los usuarios de los libros
+    
+    %STRIPE -- https://stripe.com/docs/radar/checklist
+    %Using Customer objects when creating payments allows Stripe to track the payment patterns for each customer over time. This significantly increases our ability to identify irregularities in purchasing behavior. To do this, you should:
+    
+    
 
 
 \end{document}
