--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -1191,7 +1191,14 @@
     
     Así, como se ha comentado, el pago es una tarea de vital importancia, transversal a todas las plataformas de comercio, con unos estrictos requisitos de seguridad a fin de generar la confianza que demanda el mercado. Es en este contexto donde juegan un papel esencial los proveedores de servicios de pago \emph{online}.
     
-    Actualmente en el mercado existen múltiples alternativas de servicios de este tipo, como \href{https://www.paypal.com/}{PayPal} o \href{https://securionpay.com/}{SecurionPay}, pero el elegido para el desarrollo del presente proyecto ha sido \href{https://stripe.com/}{Stripe}. La principal característica diferenciadora ha sido la muy cuidada colección de documentación, guías, ejemplos, etc. que ofrecen para facilitar la integración con su infraestructura. 
+    Actualmente en el mercado existen múltiples alternativas de servicios de este tipo, como \href{https://www.paypal.com/}{PayPal} o \href{https://securionpay.com/}{SecurionPay}, pero el elegido para el desarrollo del presente proyecto ha sido \href{https://stripe.com/}{Stripe}. La principal característica diferenciadora ha sido la cuidada colección de documentación, guías, ejemplos, etc. que ofrecen para facilitar la integración con su infraestructura.
+    
+    \begin{figure}[hbt!]
+    	\centering
+    	\includegraphics[width=\textwidth,keepaspectratio]{stripe}
+    	\caption{Flujo de información durante un pago}
+    	\label{fig:stripe}
+    \end{figure}
 
 
     % DESPLIEGUE Y SEGURIDAD
