--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -1281,7 +1281,7 @@
         
         A parte de las ventajas que de por sí ofrece el modelo de computación en la nube, Heroku destaca por proporcionar una experiencia de desarrollo excepcional. Así, los desarrolladores sólo tienen que enfocarse en las tareas propias de programación, reduciéndose las labores de despliegue a unas pocas configuraciones y a efectuar un \emph{git push}. Literalmente, tras una mínima configuración (en el común de los casos sólo necesaria la primera vez), desplegar la aplicación en Heroku se realiza enviando el repositorio Git a la plataforma (existen otras formas, como integrar GitHub o IntelliJ IDEA con Heroku).
         
-        Las aplicaciones desplegadas en Heroku son ejecutadas en contenedores Linux, denominados en la jerga Heroku como \href{https://devcenter.heroku.com/articles/dynos}{\emph{Dynos}}. Cada uno de estos contenedores puede tener una configuración \emph{Web} (los únicos que admiten tráfico HTTP), \emph{Worker} o \emph{One-off}. Además, Heroku ofrece varios tipos de \emph{dynos}, cada uno adaptado a diferentes necesidades, desde pequeños proyectos hasta servicios en producción con gran tráfico. Así, como se muestra en la figura \ref{fig:dyno_types}, tomada de la documentación oficial, cada tipo de dyno posee diferentes características, como la memoria disponible o la exclusividad de los recursos que utiliza.
+        Las aplicaciones desplegadas en Heroku son ejecutadas en contenedores Linux, denominados en la jerga Heroku como \href{https://devcenter.heroku.com/articles/dynos}{\emph{dynos}}. Cada uno de estos contenedores puede tener una configuración \emph{Web} (los únicos que admiten tráfico HTTP), \emph{Worker} o \emph{One-off}. Además, Heroku ofrece varios tipos de \emph{dynos}, cada uno adaptado a diferentes necesidades, desde pequeños proyectos hasta servicios en producción con gran tráfico. Así, como se muestra en la figura \ref{fig:dyno_types}, tomada de la documentación oficial, cada tipo de dyno posee diferentes características, como la memoria disponible o la exclusividad de los recursos que utiliza.
         
         \begin{figure}[hbt!]
         	\centering
@@ -1290,14 +1290,37 @@
         	\label{fig:dyno_types}
         \end{figure}
         
-        FirstMarket ha sido desplegada en Heroku usando un \emph{Dyno} del tipo \emph{Hobby} con configuración \emph{Web}.
+        FirstMarket ha sido desplegada en Heroku usando un \emph{dyno} del tipo \emph{hobby} con configuración \emph{web}. En la figura \ref{fig:heroku} se muestra el panel central desde donde se gestiona el despliegue. Resaltar que este \emph{dyno} tiene un coste de 7 dólares por mes.
+        
+        \begin{figure}[hbt!]
+        	\centering
+        	\includegraphics[width=\textwidth,keepaspectratio]{heroku}
+        	\caption{Panel de control del despliegue de FirstMarket en Heroku}
+        	\label{fig:heroku}
+        \end{figure}
         
         \subparagraph{Heroku Add-ons}
-        Uno de los aspectos más interesantes de Heroku es su oferta de \emph{Add-ons}, accesible en su \href{https://elements.heroku.com/addons}{marketplace}. Se trata de módulos que se le pueden añadir a la aplicación web, algunos gratuitos y otros de pago. La aplicación web desarrollada hace uso de los siguientes:
+        Uno de los aspectos más interesantes de Heroku es su oferta de \emph{Add-ons}, accesible en su \href{https://elements.heroku.com/addons}{marketplace}. Se trata de módulos que se pueden añadir a la aplicación web, algunos gratuitos y otros de pago. La aplicación web desarrollada hace uso de los siguientes:
         
         \begin{itemize}
-        	\item[-] \href{https://elements.heroku.com/addons/heroku-postgresql}{Heroku Postgres}. Este es el servicio de base de datos utilizado para la capa de persistencia de la aplicación web cuando está desplegada en Heroku. El plan contratado es el gratuito, estando restringido a que el total de filas en la base de datos no supere las 10000, y con un máximo de 20 conexiones disponibles.
-        	\item[-] \href{https://elements.heroku.com/addons/logdna}{LogDNA}. Este servicio permite acceder a los registros emitidos, tanto por la Heroku como por la aplicación web, de una manera sencilla a través del navegador. Tiene multitud de opciones de configuración, siendo la interfaz gráfica mostrada en la figura \ref{label}.
+        	\item[-] \href{https://elements.heroku.com/addons/heroku-postgresql}{Heroku Postgres}. Este es el servicio de base de datos utilizado para la capa de persistencia de la aplicación web cuando está desplegada en Heroku. El plan contratado es el gratuito, estando restringido a que el total de filas en la base de datos no supere las 10000, y con un máximo de 20 conexiones disponibles. En la figura \ref{fig:herokupostgres} se muestra el panel central de este servicio. Destacar la posibilidad de crear \emph{Dataclips}, que son consultas almacenadas sobre la base de datos. Como se aprecia, el número de filas se encuentra por debajo del límite.
+        	
+        	\begin{figure}[hbt!]
+        		\centering
+        		\includegraphics[width=\textwidth,keepaspectratio]{herokupostgres}
+        		\caption{Panel de control de Heroku Postgres}
+        		\label{fig:herokupostgres}
+        	\end{figure}
+        	
+        	\item[-] \href{https://elements.heroku.com/addons/logdna}{LogDNA}. Este servicio permite acceder a los registros emitidos, tanto por la Heroku como por la aplicación web, de una manera sencilla a través del navegador. Tiene multitud de opciones de configuración, siendo la interfaz gráfica la mostrada en la figura \ref{fig:logdna}.
+        	
+        	\begin{figure}[hbt!]
+        		\centering
+        		\includegraphics[width=\textwidth,keepaspectratio]{logdna}
+        		\caption{Registros con LogDNA}
+        		\label{fig:logdna}
+        	\end{figure}
+        	
         	\item[-] \href{https://elements.heroku.com/addons/probely}{Probely}. Este servicio está enfocado a analizar la seguridad de la aplicación desde una multitud de puntos de vista. 
         	\item[-] \href{https://elements.heroku.com/addons/snyk}{Snyk}. Este add-on revisa las dependencias del proyecto en busca de vulnerabilidades de seguridad.
         \end{itemize}
