--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -1334,7 +1334,7 @@
        		\label{fig:logdna}
        	\end{figure}
        	
-       	\item[-] \href{https://elements.heroku.com/addons/probely}{Probely}. Este servicio está enfocado a analizar la seguridad de la aplicación desde una multitud de puntos de vista. 
+       	\item[-] \href{https://elements.heroku.com/addons/probely}{Probely}. Este es un servicio de detección de vulnerabilidades de seguridad. En su versión pro, a la cual se ha tenido acceso gratuito durante dos semanas, permite realizar multitud de pruebas a la aplicación web, generando un informe de forma automática con los problemas encontrados y sus posibles soluciones.
        	\item[-] \href{https://elements.heroku.com/addons/snyk}{Snyk}. Este add-on revisa las dependencias del proyecto en busca de vulnerabilidades de seguridad.
     \end{itemize}
     
