little report increment

--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -1340,6 +1340,9 @@
 	\end{figure}
 
 	\section{Seguridad}
+	
+	%Security. An incredibly overloaded word in the IT world. It means so many different things in so many different contexts, but in the end, it is all about protecting sensitive and valuable resources against malicious usage.
+	
 	Esta sección está dedicada a las cuestiones de seguridad relacionadas con FirstMarket.
 	\subsection{HTTPS} \label{sec:https}
 	Como se ha comentado, una de los principales retos que afronta el comercio electrónico es la generación de confianza. Los usuarios demandan seguridad a la hora de realizar sus compras por la red. En este sentido, el desarrollo de protocolos seguros de comunicación ha jugado un papel protagonista en el rápido incremento que el comercio \emph{online} ha vivido en las últimas décadas.
@@ -1372,6 +1375,11 @@
 	\end{lstlisting}
 	
 	\subsection{Spring Security} \label{sec:springsec}
+	
+	%Spring Security provides comprehensive support for authentication, authorization, and protection against common exploits
+	
+	%So this is Spring Security: an application-level security framework built on top of the powerful Spring Framework that deals mainly with the core security concepts of authentication and authorization
+	
 	\subparagraph{Cross-Site Request Forgery}
 	\subsection{Brute-Force Authentication}
 	\subsection{Stripe Radar} \label{sec:striperadar}
