--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -1340,10 +1340,9 @@
 	\end{figure}
 
 	\section{Seguridad}
+	La palabra seguridad es empleada en multitud de situaciones dentro del mundo de las tecnologías de la información, normalmente con significados dispares. No obstante, generalizando lo suficiente, viene a referirse a la protección que se debe proporcionar a determinados recursos, por su valor y/o sensibilidad, frente a posibles usos malintencionados.
 	
-	%Security. An incredibly overloaded word in the IT world. It means so many different things in so many different contexts, but in the end, it is all about protecting sensitive and valuable resources against malicious usage.
-	
-	Esta sección está dedicada a las cuestiones de seguridad relacionadas con FirstMarket.
+	Esta sección está dedicada a las cuestiones de seguridad, en sentido amplio, relacionadas con \href{https://firstmarket.tech}{FirstMarket}.
 	\subsection{HTTPS} \label{sec:https}
 	Como se ha comentado, una de los principales retos que afronta el comercio electrónico es la generación de confianza. Los usuarios demandan seguridad a la hora de realizar sus compras por la red. En este sentido, el desarrollo de protocolos seguros de comunicación ha jugado un papel protagonista en el rápido incremento que el comercio \emph{online} ha vivido en las últimas décadas.
 	
@@ -1379,6 +1378,13 @@
 	%Spring Security provides comprehensive support for authentication, authorization, and protection against common exploits
 	
 	%So this is Spring Security: an application-level security framework built on top of the powerful Spring Framework that deals mainly with the core security concepts of authentication and authorization
+	
+	%https://en.wikipedia.org/wiki/Bcrypt
+	
+	
+	%This document defines Content Security Policy (CSP), a tool which developers can use to lock down their applications in various ways, mitigating the risk of content injection vulnerabilities such as cross-site scripting, and reducing the privilege with which their applications execute.
+	
+	%CSP is not intended as a first line of defense against content injection vulnerabilities. Instead, CSP is best used as defense-in-depth. It reduces the harm that a malicious injection can cause, but it is not a replacement for careful input validation and output encoding.
 	
 	\subparagraph{Cross-Site Request Forgery}
 	\subsection{Brute-Force Authentication}
